--- a/widgets/KnockoutWidget/Widget.html
+++ b/widgets/KnockoutWidget/Widget.html
@@ -1,4 +1,5 @@
 <div>
-<p>First name: <input data-bind="value: firstName"/></p>
-<p>Last name: <input data-bind="value: firstNameCaps"/></p>
+<p>Current zoom level: <span data-bind="text: zoomLevel"></span></p>
+<Button data-bind="click: increaseZoom">Increase zoom</Button>
+<Button data-bind="click: decreaseZoom">Decrease zoom</Button>
 </div>
